--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     </form>
     <ul class="js-toDoList">
     </ul>
+    <ul class="done">
+    </ul>
     <script src="clock.js"></script>
     <script src="gretting.js"></script>
     <script src="todo.js"></script>
