--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
     </ul>
     <ul class="done">
     </ul>
+    <span class="js-weather"></span>
+
     <script src="clock.js"></script>
     <script src="gretting.js"></script>
     <script src="todo.js"></script>
-    <!-- <script src="bg.js"></script> -->
+    <script src="background.js"></script>
+    <script src="weather.js"></script>
 </body>
 
 </html>
