--- a/index.html
+++ b/index.html
@@ -9,21 +9,23 @@
 </head>
 
 <body>
-    <div class="js-clock">
-        <h1>00:00</h1>
+    <div id="wrap">
+        <div class="js-clock">
+            <h1>00:00</h1>
+        </div>
+        <form class="js-form form">
+            <input type="text" placeholder="What is your name?" />
+        </form>
+        <h4 class="js-greetings greetings"></h4>
+        <form class="js-toDoForm">
+            <input type="text" placeholder="Write a to do" />
+        </form>
+        <ul class="js-toDoList">
+        </ul>
+        <ul class="done">
+        </ul>
+        <span class="js-weather"></span>
     </div>
-    <form class="js-form form">
-        <input type="text" placeholder="What is your name?" />
-    </form>
-    <h4 class="js-greetings greetings"></h4>
-    <form class="js-toDoForm">
-        <input type="text" placeholder="Write a to do" />
-    </form>
-    <ul class="js-toDoList">
-    </ul>
-    <ul class="done">
-    </ul>
-    <span class="js-weather"></span>
 
     <script src="clock.js"></script>
     <script src="gretting.js"></script>
