--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
     <title>크롬 웹서비스</title>
 </head>
 
 <body>
-    <div id="wrap">
         <div class="js-clock">
             <h1>00:00</h1>
         </div>
@@ -25,13 +25,13 @@
         <ul class="done">
         </ul>
         <span class="js-weather"></span>
-    </div>
 
     <script src="clock.js"></script>
     <script src="gretting.js"></script>
     <script src="todo.js"></script>
     <script src="background.js"></script>
     <script src="weather.js"></script>
+    <script src="wheelEvent.js"></script>
 </body>
 
 </html>
